# BuildIT-Platform

./: .env.development  .env.example  .env.production  .env.testing  .gitignore  ACCOUNT_MANAGER_REPORT.md  ACCOUNT_MANAGER_SIMULATION_V2.md  BUTTON_AUDIT.md  COMMUNICATION_FEED_VALIDATION.md  CUSTOMER_WORKSPACE_SPEC.md  DEPLOY.md  Makefile  PHASE_11_SPRINT_COMPLETION.md  PHASE_12B_IMPLEMENTATION_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_IMPLEMENTATION_SUMMARY.md  PHASE_SUMMARY.md  PRODUCTION_READINESS_AUDIT.md  PROJECT_RECONSTRUCTION_REPORT.md  README.md  RICH_COMMUNICATION_STUDIO_STATUS.md  STAKEHOLDER_ACCEPTANCE_CERTIFICATION.md  SUMMARY.md  USER_JOURNEY_TESTING.md  USER_OPERATING_MODEL.md  WAVE_1_VALIDATION_REPORT.md  WAVE_2_IMPLEMENTATION_REPORT.md  WAVE_3_VALIDATION_REPORT.md  WAVE_4_VALIDATION_REPORT.md  enterprise_seo_ai_platform_blueprint.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  citation_schema.sql  cleanup_workflows.py  create_test_approvals.py  create_test_templates.py  pyproject.toml  seed_dataset_v2.py  seed_test_dataset.py  test_config.py  test_phase11.py
backend/alembic/: env.py
backend/certification/: 14.3C.1_rbac_enforcement.md  14.3C.2_tenant_isolation_hardening.md  14.3C.3_row_level_security.md  14.3C.4_security_test_suite.md  14.3C.5_security_observability.md  API_VALIDATION.md  ARCHITECTURE_AUDIT.md  AUTOMATED_BACKLINKING_FINAL_CERTIFICATION.md  BACKLINK_ENGINE_AUDIT.md  BACKLINK_FAILURE_ANALYSIS.md  BACKLINK_FUNNEL_REPORT.md  BACKLINK_QUALITY_REPORT.md  BACKLINK_WORKFLOW_VALIDATION.md  COMMERCIAL_FEASIBILITY_REPORT.md  DATABASE_CERTIFICATION.md  FINAL_CERTIFICATION.md  INFRASTRUCTURE_VALIDATION.md  INTEGRATION_VERIFICATION.md  OBSERVABILITY_AUDIT.md  OUTREACH_QUALITY_REPORT.md  PERFORMANCE_BENCHMARK.md  PHASE3_CHAOS_REPORT.md  PHASE3_DATABASE_AUDIT.md  PHASE3_ENDPOINT_VALIDATION.md  PHASE3_FINAL_CERTIFICATION.md  PHASE3_OBSERVABILITY_AUDIT.md  PHASE3_PERFORMANCE_REPORT.md  PHASE3_SECURITY_AUDIT.md  PHASE3_SYSTEM_INVENTORY.md  PHASE3_UAT_REHEARSAL.md  PHASE3_UI_AUDIT.md  PHASE3_WORKFLOW_VALIDATION.md  PHASE_14.4_API_VALIDATION.md  PHASE_14.4_ARCHITECTURE_AUDIT.md  PHASE_14.4_BUG_REPORT.md  PHASE_14.4_BUILD_VALIDATION.md  PHASE_14.4_DATABASE_CERTIFICATION.md  PHASE_14.4_FINAL_CERTIFICATION.md  PHASE_14.4_FRONTEND_CERTIFICATION.md  PHASE_14.4_RBAC_CERTIFICATION.md  (+8 more)
backend/data/: email_patterns.json  form_field_translations.json  form_mappings.json
backend/reports/: APPROVAL_WORKFLOW_REPORT.md  FRONTEND_VALIDATION_REPORT.md  INTEGRATION_TEST_REPORT.md  MEMORY_AWARE_PLANNING_REPORT.md  OBSERVABILITY_REPORT.md  PERFORMANCE_REPORT.md  PHASE_14_3B_FINAL_CERTIFICATION.md  PLAN_API_REPORT.md  SECURITY_REVIEW_REPORT.md  TENANT_ISOLATION_REPORT.md
backend/scripts/: add_rls_policies.py  backup.sh  backup_automated.sh  create_templates.py  credential_health_checker.py  fix_rls_bypass.py  generate_scale_test_data.py  install_supervisor.sh  migrate_campaign_portfolio.py  migrate_email_drafts.py  migrate_templates.py  restore.sh  restore_noninteractive.sh  (+12 more)
(+1207 files in other folders)
