[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-platform"
version = "0.1.0"
description = "Enterprise AI-Powered SEO Operations & Backlink Automation Platform"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",

    # --- Redis ---
    "redis[hiredis]>=5.0.0",

    # --- Kafka ---
    "aiokafka>=0.10.0",

    # --- Temporal ---
    "temporalio>=1.6.0",

    # --- Validation & Serialization ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Auth / JWT ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # --- Observability ---
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",

    # --- Vector DB ---
    "qdrant-client>=1.9.0",

    # --- AI / ML ---
    "numpy>=1.26.0",
    "hdbscan>=0.8.33",
    "tiktoken>=0.7.0",

    # --- Utilities ---
    "tenacity>=8.3.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "termcolor>=2.4.0",
    "playwright>=1.43.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "testcontainers[postgres,redis,kafka]>=4.4.0",
    "faker>=24.0.0",
    "respx>=0.21.0",
]

[project.scripts]
seo-cli = "seo_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific
    "ASYNC", # flake8-async
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["seo_platform"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
